--- a/css/style.css
+++ b/css/style.css
@@ -271,6 +271,21 @@ section {
   margin: 0 0 8px 0;
 }
 
+.breadcrumbs__list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.breadcrumbs__list li:not(:first-child) {
+  margin: 0 0 0 4px;
+}
+
 .select {
   position: relative;
 }
@@ -1628,9 +1643,11 @@ section {
   transition: 0.2s;
 }
 
-.park__car-item:hover {
-  -webkit-box-shadow: 0px 8px 32px rgba(26, 109, 186, 0.08);
-          box-shadow: 0px 8px 32px rgba(26, 109, 186, 0.08);
+@media screen and (min-width: 768px) {
+  .park__car-item:hover {
+    -webkit-box-shadow: 0px 8px 32px rgba(26, 109, 186, 0.08);
+            box-shadow: 0px 8px 32px rgba(26, 109, 186, 0.08);
+  }
 }
 
 .park__car-item._show {
