--- a/scss/blocks/_park-car.scss
+++ b/scss/blocks/_park-car.scss
@@ -32,8 +32,10 @@
   opacity: 0;
   transition: $transition;
 
-  &:hover {
-    box-shadow: 0px 8px 32px rgba(26, 109, 186, 0.08);
+  @media screen and (min-width: 768px) {
+    &:hover {
+      box-shadow: 0px 8px 32px rgba(26, 109, 186, 0.08);
+    }
   }
 
   &._show {
