--- a/scss/price.scss
+++ b/scss/price.scss
@@ -66,89 +66,7 @@ $third: var(--third);
   }
 }
 
-.price__acc__header {
-  width: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.price__acc__header__item {
-  width: 33.333%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 16px 0;
-  border-bottom: 1px solid $outline;
-  cursor: pointer;
-
-  &._active {
-    border-bottom: 4px solid $accent;
-
-    & .price__acc__header-title {
-      color: $main;
-    }
-  }
-}
-
-.price__acc__header-title {
-  font-size: 18px;
-  font-weight: 600;
-  color: $accent; 
-}
-
-.price__acc__header-date {
-  font-size: 12px;
-  color: $third;
-  margin: 4px 0 0 0;
-}
-
-.price__acc__body {
-  margin: 24px 0 0 0;
-  overflow-x: auto;
-  overflow-y: hidden;
-}
-
-.price__acc__body__item {
-  min-width: 760px;
-
-  & table {
-    width: 100%;
-  }
-
-  & tr {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 24px 0;
-    border-bottom: 1px solid $outline;
-  }
-
-  & tr td {
-    width: 40%;
-  }
-
-  & tr td:nth-child(1) {
-    max-width: 416px;
-    width: 100%;
-    font-weight: 600;
-    color: $accent;
-  }
-
-  & tr td:nth-child(2),
-  & tr td:nth-child(6) {
-    width: 30%;
-  }
-
-  & tr:nth-child(1) {
-    color: $third;
-
-    & td:nth-child(1) {
-      color: $third;
-    }
-  }
-}
+@import 'blocks/_price-acc'; 
 
 .price__services {
   grid-template-columns: repeat(3, 1fr);
