--- a/scss/style.scss
+++ b/scss/style.scss
@@ -193,6 +193,15 @@ section {
   margin: 0 0 8px 0; 
 }
 
+.breadcrumbs__list {
+  display: flex;
+  align-items: center;
+
+  & li:not(:first-child) {
+    margin: 0 0 0 4px;
+  }
+}
+
 @import 'blocks/_select';
 
 //<ПОДКЛЮЧАЕМ БЛОКИ>==================================================================================
